- Port all current Jasper fixes and improvements.